--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,4 +22,5 @@ importFrom(lubridate,parse_date_time)
 importFrom(magrittr,set_colnames)
 importFrom(readr,read_csv)
 importFrom(rvest,html_nodes)
+importFrom(rvest,html_table)
 importFrom(xml2,read_html)
