--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,18 @@ Version: 0.1.0
 Author: Robert Myles McDonnell
 Maintainer: Robert Myles McDonnell <robertmylesmcdonnell@gmail.com>
 Description:
-    Downloads and tidies the San Francisco Public Utilities Commission Beach Water Quality Monitoring Program data. Datasets can be downloaded per beach, or the raw data can be downloaded.
+    Downloads and tidies the San Francisco Public Utilities Commission Beach Water Quality Monitoring Program data. Data sets can be downloaded per beach, or the raw data can be downloaded. See <https://sfwater.org/cfapps/lims/beachmain1.cfm>.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Imports: xml2 (>= 1.1.1),
+    rvest(>= 0.3.2),
+    lubridate (>= 1.6.0),
+    magrittr (>= 1.5),
+    tibble (>= 1.3.3),
+    dplyr (>= 0.5.0),
+    readr (>= 1.0.0)
+Suggests: testthat,
+    knitr,
+    rmarkdown
 RoxygenNote: 6.0.1
